@@ -26,7 +26,7 @@ public class Placeholders extends PlaceholderExpansion {
 
 	@Override
 	public @NotNull String getAuthor() {
-		return plugin.getDescription().getAuthors().get(0);
+		return plugin.getDescription().getAuthors().getFirst();
 	}
 
 	@Override
